add inline elements

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
    
-    <div>
-       <div>
-           <h1>FIND NAME APPLICATION</h1>
+    <div class="container-fluid p-1">
+       <div class='row'>
+           <h1 class="">FIND NAME APPLICATION</h1>
            <P>HELLO, <br>In this web application you will be able to get your <strong>Akan name </strong>by simply putting down your birthday and your age in the spaces provided.</P>
 
        </div>
@@ -20,8 +20,16 @@
 
        <div>
             <div>
-                <label for="text">Enter Birthday:</label>
-               <input type="text" placeholder="dd/mm/yy">
+               <label for="text">ENTER DAY:</label>
+               <input type="text" placeholder="DAY">
+            </div>
+            <div>
+                <label for="text"> ENTER MONTH:</label>
+                <input type="text" placeholder="MONTH">
+            </div>
+            <div>
+                <label for="text"> ENTER YEAR OF BIRTH</label>
+                <input type="text" placeholder="YEAR">
             </div>
 
             <div>
