--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <!-- <link rel="script" href="css/javascript/script.js"> -->
     <script src="javascript/script.js"></script>
   </head>
   <body>
@@ -58,7 +57,7 @@
         <br />
 
         <div>
-          <input type="radio" name="gender" value="male" id="male" checked />MALE <br />
+          <input type="radio" name="gender" value="male" id="male" />MALE <br />
           <input type="radio" name="gender" value="female" id="female" />FEMALE
         </div>
         <div>
